orm-tests/tests/snapshots/node_attributes__node_attributes_-2.snap
---
source: orm-tests/tests/node_attributes.rs
expression: "StudentWithGranularAttributes::define_fields().iter().map(|x|\n                x.to_raw().build()).collect::<Vec<_>>().join(\"\\n\")"
---
DEFINE FIELD id ON TABLE student_with_granular_attributes TYPE record<student_with_granular_attributes>;
DEFINE FIELD firstName ON TABLE student_with_granular_attributes TYPE string;
DEFINE FIELD lastName ON TABLE student_with_granular_attributes TYPE string;
DEFINE FIELD ageInlineExpr ON TABLE student_with_granular_attributes TYPE int VALUE $value OR 18 ASSERT ($value IS NOT NONE) AND ($value >= 18)
PERMISSIONS
FOR create, delete
	WHERE firstName IS 'Oyelowo';
DEFINE FIELD ageDefaultExternalFunctionInvokedExpr ON TABLE student_with_granular_attributes TYPE int VALUE $value OR 18 ASSERT ($value IS NOT NONE) AND ($value >= 18)
PERMISSIONS
FOR create, delete
	WHERE firstName IS 'Oyelowo'
FOR update
	WHERE ageInlineExpr <= 130;
DEFINE FIELD ageTeenExternalFunctionInvokedExpr ON TABLE student_with_granular_attributes TYPE int VALUE $value OR 18 ASSERT ($value IS NOT NONE) AND ($value >= 18)
PERMISSIONS
FOR create, delete
	WHERE firstName IS 'Oyelowo'
FOR update
	WHERE ageInlineExpr <= 130;
DEFINE FIELD ageSeniorExternalFunctionInvokedExpr ON TABLE student_with_granular_attributes TYPE int VALUE $value OR 60 ASSERT ($value IS NOT NONE) AND ($value >= 18);
DEFINE FIELD ageChildExternalFunctionInvokedExpr ON TABLE student_with_granular_attributes TYPE int VALUE $value OR 10
PERMISSIONS
FOR create, delete
	WHERE firstName IS 'Oyelowo'
FOR update
	WHERE ageInlineExpr <= 130;
DEFINE FIELD ageAdultExternalFunctionInvokedExpr ON TABLE student_with_granular_attributes TYPE int VALUE $value OR 30;
DEFINE FIELD ageExternalFnAttrs ON TABLE student_with_granular_attributes TYPE int VALUE $value OR 18 ASSERT ($value IS NOT NONE) AND ($value >= 18)
PERMISSIONS
FOR create, delete
	WHERE firstName IS 'Oyelowo'
FOR update
	WHERE ageInlineExpr <= 130;
DEFINE FIELD ageMixAndMatchExternalFnInlineAttrs ON TABLE student_with_granular_attributes TYPE int VALUE $value OR 18 ASSERT ($value IS NOT NONE) AND ($value >= 18)
PERMISSIONS
FOR create, delete
	WHERE firstName IS 'Oyelowo'
FOR update
	WHERE ageInlineExpr <= 130;
DEFINE FIELD timeToKelowna ON TABLE student_with_granular_attributes TYPE duration VALUE $value OR { nanos: 0, secs: 604800 } ASSERT $value IS NOT NONE;
DEFINE FIELD timeToKelownaInline ON TABLE student_with_granular_attributes TYPE duration VALUE $value OR { nanos: 0, secs: 604800 } ASSERT $value IS NOT NONE;
DEFINE FIELD bestFriend ON TABLE student_with_granular_attributes TYPE record<student_with_granular_attributes>;
DEFINE FIELD unoBook ON TABLE student_with_granular_attributes TYPE record<book>;
DEFINE FIELD course ON TABLE student_with_granular_attributes TYPE record<book>;
DEFINE FIELD semesterCourses ON TABLE student_with_granular_attributes TYPE array<record<book>>;
