orm-tests/tests/snapshots/node_attributes__node_attributes_.snap
---
source: surreal-orm-tests/tests/node_attributes.rs
expression: "StudentWithGranularAttributes::define_table().to_raw().build()"
---
DEFINE TABLE student_with_granular_attributes DROP FLEXIBLE SCHEMAFULL AS 
	SELECT * FROM student
PERMISSIONS
FOR select, update
	WHERE firstName IS 'Oyedayo'
FOR create, delete
	WHERE ageInlineExpr <= 57;
